[tool.poetry]
name = "ecs-deploy-tester"
version = "0.1.0"
description = ""
authors = ["kkamikoon <rootsik1221@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
color-pprint = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
